--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Deploy to Vercel
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,5 +21,10 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests
-      run: npm test
+    - name: Fix permissions for Vite
+      run: chmod +x node_modules/.bin/vite
+
+    - name: Deploy to Vercel
+      env:
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      run: npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
