Update GitHub Actions workflow and fix import paths

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,24 +2,39 @@ name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main, master]
 
-jobs:
+jobs: 
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-    - name: Run tests
-      run: npm test
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Print debugging information
+        run: |
+          echo "Node Version: $(node --version)"
+          echo "NPM Version: $(npm --version)"
+          echo "Working Directory: $(pwd)"
+          echo "Contents of Working Directory: $(ls -l)"
+          echo "Contents of node_modules: $(ls -l node_modules)"
+
+      - name: Run tests
+        run: npm test
