--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: React CI
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, features]
 
 jobs: 
   build:
@@ -10,12 +10,20 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Use Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '20'
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         run: npm ci
@@ -29,4 +37,4 @@ jobs:
           echo "Contents of node_modules: $(ls -l node_modules)"
 
       - name: Run tests
-        run: npm test
+        run: npm test src/features/test
