--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -11,18 +11,21 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: '20'
 
     - name: Install dependencies
-      run: npm install
+      run: npm ci
 
     - name: Fix permissions for Vite
       run: chmod +x node_modules/.bin/vite
+
+    - name: Build project
+      run: npm run build
 
     - name: Deploy to Vercel
       env:
